Fix the spacing in the CTA below how-it-works

--- a/css/outer/homeb.less
+++ b/css/outer/homeb.less
@@ -307,7 +307,7 @@ body#home-page {
 
 
   .how-it-works {
-    margin-top: 25px;
+    margin: 25px 0;
 
     // the "how it works" arrow
     .container {
